# athenaeum

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.claude/skills/resolve-questions/: SKILL.md
.codex/: repo-overrides.env
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  ready-to-build.md  unprioritized.md
.github/workflows/: add-to-project.yml  ci.yml  dependabot-auto-merge.yml  evals.yml  oss-readiness.yml  promote-main.yml  release.yml  scorecard.yml
docs/: adapter-contract.md  authority-manifest.md  auto-resolve.md  configuration.md  conflict-resolution.md  contradiction-detection.md  deploy-sha-stamp.md  memory-taxonomy.md  provenance-shape.md  recall-architecture.md  security-posture.md  source-handles.md  storage-adapter-contract.md  why-athenaeum.md
docs/integrations/: claude-code.md
examples/adapters/: README.md  minimal_adapter.py
examples/claude-code/: AUDIT.md  CLAUDE.md.example  README.md  auto-memory-frontmatter.example.md  pending-questions-surface.sh  pre-compact-save.sh  rebuild-index.sh  session-start-recall.sh  settings-snippet.json  setup-symlinks.sh  stop-hook-validate.sh  user-prompt-recall.sh  wiki-context-inject.sh
policies/: auto-memory-citation.md
scripts/: deploy-sync.sh  measure_contradiction_baseline.py  write_build_sha.py
skills/adapter-authoring/: SKILL.md
src/athenaeum/: __init__.py  _cmd_authority.py  _cmd_axiom.py  _cmd_calibration.py  _cmd_decisions.py  _cmd_merges.py  _cmd_questions.py  _lint.py  _retry.py  answers.py  atomic_io.py  authority.py  auto_memory_prune.py  axiom_governance.py  batch.py  calibration.py  claim_kind.py  cli.py  clusters.py  config.py  contradictions.py  cross_scope.py  decisions.py  dedupe.py  delta.py  ephemeral.py  fingerprint.py  inference_blocks.py  init.py  json_utils.py  killswitch.py  librarian.py  mcp_server.py  memory_index.py  merge.py  merge_type_gate.py  models.py  owner.py  pending_merges.py  pii.py  (+23 more)
src/athenaeum/connectors/: __init__.py  apollo.py
src/athenaeum/schema/: _entity-template.md  access-levels.md  observation-filter.md  tags.md  types.md
src/athenaeum/templates/: __init__.py  company.md  concept.md  person.md  project.md  source.md
tests/: conftest.py  test_answers.py  test_apollo_connector.py  test_authority_manifest.py  test_auto_apply_human_verdict.py  test_auto_apply_threshold.py  test_auto_memory_prune.py  test_auto_resolve.py  test_axiom_governance.py  test_backfill_sources.py  test_batch_mode.py  test_bound_merge_read_path.py  test_budget_deferred.py  test_calibration.py  test_calibration_cli.py  test_claim_kind.py  test_cli.py  test_compile_as_of.py  test_config.py  test_config_parity.py  test_conflict_resolution.py  test_contradictions.py  test_cross_scope.py  test_decisions_cli.py  test_decisions_core.py  test_dedupe.py  test_delta.py  test_delta_compile_equivalence.py  test_disambiguation.py  test_enact_keep_deprecate.py  test_enact_resolution.py  test_ephemeral_classifier.py  test_ephemeral_intake.py  test_example_adapter.py  test_fingerprint_cache.py  test_freetext_writeback.py  test_ingest_reindex.py  test_init.py  test_init_templates.py  test_json_utils.py  (+66 more)
tests/benchmarks/: conftest.py  test_search_bench.py
tests/data/: resolve_system.txt
tests/evals/: README.md  __init__.py  conftest.py  harness.py  test_backfill_eval.py  test_detector_eval.py  test_recall_eval.py  test_resolver_eval.py
tests/evals/data/backfill/: README.md
tests/evals/data/detector/: cases.yaml
tests/evals/data/recall/: cases.yaml
tests/evals/data/recall/wiki/: budget-approver.md  client-acme.md  client-bluewater.md  client-meridian.md  client-owner-meridian.md  expense-policy.md  meeting-cadence.md  office-address.md  owner-amir.md  owner-priya.md  project-invoice-cadence.md  project-portal-hosting.md  pto-policy.md  standup.md  tool-gsheets.md  tool-notion.md
tests/evals/data/resolver/: cases.yaml
tests/fixtures/: pending_merges_regressed.md
tests/fixtures/wiki_sample/: 12345678-athenaeum.md  aa11bb22-lean-startup.md  abc12345-jane-doe.md  cc33dd44-blank-paper.md  def67890-acme-corp.md  ee55ff66-tool-page.md
tests/regression/: test_2026_05_24_pending_questions.py  test_live_prompt_regression.py
