[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "athenaeum"
version = "0.3.1"
description = "Open source knowledge management pipeline — append-only intake, tiered compilation, configurable schemas"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Kromatic Innovation", email = "open-source@kromatic.com" },
]
keywords = ["knowledge-management", "ai", "llm", "memory", "compilation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0,<7",
    # anthropic and fastmcp are pre-1.0 and ship breaking changes freely.
    # chromadb has shipped sqlite schema migrations in minor bumps. We cap
    # at the next-major boundary (1.0 / 3.0) so a surprise release can't
    # silently break a released athenaeum wheel — bumps are explicit PRs.
    "anthropic>=0.30.0,<1.0",
]

[project.optional-dependencies]
mcp = [
    "fastmcp>=2.0.0,<3.0",
]
vector = [
    "chromadb>=0.5.0,<2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "fastmcp>=2.0.0,<3.0",
]

[project.scripts]
athenaeum = "athenaeum.cli:main"

[project.urls]
Homepage = "https://github.com/Kromatic-Innovation/athenaeum"
Repository = "https://github.com/Kromatic-Innovation/athenaeum"
Issues = "https://github.com/Kromatic-Innovation/athenaeum/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/athenaeum"]
# Non-Python artefacts we ship in the wheel. Current hatchling defaults
# already pick these up, but declaring them explicitly protects against
# future default-include shifts that would silently break `athenaeum init`
# (schema templates) or type-checker discovery (PEP 561 marker).
include = [
    "src/athenaeum/py.typed",
    "src/athenaeum/schema/**/*.md",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
