[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "athenaeum"
version = "0.13.2"
description = "Open source knowledge management pipeline — append-only intake, tiered compilation, configurable schemas"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Kromatic Innovation", email = "open-source@kromatic.com" },
]
keywords = ["knowledge-management", "ai", "llm", "memory", "compilation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0,<7",
    # anthropic is pre-1.0 and ships breaking changes freely; fastmcp is
    # post-1.0 (3.x as of 2026-05) but still iterating on its MCP protocol
    # surface; chromadb has shipped sqlite schema migrations in minor bumps.
    # We cap each at an explicit upper bound (next-major boundary or wider)
    # so a surprise release can't silently break a released athenaeum
    # wheel — bumps are explicit PRs.
    # Floor 0.39.0: first stable release shipping client.messages.batches
    # (the Batch API surface batch-mode depends on, #236).
    # Last tested against anthropic 0.109.2 (2026-06-18). The range stays
    # open to <1.0; record the tested minor here so a CI run that resolves a
    # newer-than-tested 0.x is visible at a glance against this baseline.
    "anthropic>=0.39.0,<1.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
mcp = [
    "fastmcp>=2.0.0,<4.0",
]
vector = [
    "chromadb>=0.5.0,<2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "fastmcp>=2.0.0,<4.0",
]
bench = [
    # Optional: pytest-benchmark is only needed to run tests/benchmarks/
    # (p95 search-latency harness, issue #69). The main `dev` extra does
    # NOT include it so CI's default `pytest` invocation doesn't slow
    # down — the benchmark module is ignored by default via
    # `[tool.pytest.ini_options].addopts` below.
    "pytest>=8.0",
    "pytest-benchmark>=4.0,<6.0",
]

[project.scripts]
athenaeum = "athenaeum.cli:main"

[project.urls]
Homepage = "https://github.com/Kromatic-Innovation/athenaeum"
Repository = "https://github.com/Kromatic-Innovation/athenaeum"
Issues = "https://github.com/Kromatic-Innovation/athenaeum/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/athenaeum"]
# Non-Python artefacts we ship in the wheel. Current hatchling defaults
# already pick these up, but declaring them explicitly protects against
# future default-include shifts that would silently break `athenaeum init`
# (schema templates) or type-checker discovery (PEP 561 marker).
include = [
    "src/athenaeum/py.typed",
    "src/athenaeum/schema/**/*.md",
    "src/athenaeum/templates/**/*.md",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# tests/benchmarks/ is excluded from the default collection so CI's
# vanilla `pytest` invocation doesn't pull in pytest-benchmark. Run them
# explicitly with `pytest tests/benchmarks/ --benchmark-only` (cli paths
# override `--ignore`). See tests/benchmarks/test_search_bench.py.
addopts = "--ignore=tests/benchmarks"
markers = [
    "regression: contract regression tests pinning resolver outputs against canonical fixtures",
    "live: opt-in live-LLM tests; require ATHENAEUM_LIVE_TESTS=1 and ANTHROPIC_API_KEY",
]
